[gd_scene load_steps=19 format=3 uid="uid://npur6sx76elc"]

[ext_resource type="Script" path="res://game/game.gd" id="1_5tq4r"]
[ext_resource type="PackedScene" uid="uid://hh1gbksu1uoc" path="res://game/player/player.tscn" id="2_ol85g"]
[ext_resource type="PackedScene" uid="uid://cim66h1symil0" path="res://game/weapon/weapon_exposedreactor.tscn" id="3_c3pw5"]
[ext_resource type="Theme" uid="uid://bpx2rgbaeu08" path="res://themes/grid_theme.tres" id="3_g6axv"]
[ext_resource type="Script" path="res://game/level/level.gd" id="4_a67pm"]
[ext_resource type="PackedScene" uid="uid://cv6eegilkksxb" path="res://game/weapon/weapon_electromagnet.tscn" id="5_0vwjd"]
[ext_resource type="Texture2D" uid="uid://04rpwpth35i8" path="res://assets/sprites/floor_desert.png" id="5_emp0a"]
[ext_resource type="Script" path="res://game/hud/hud.gd" id="6_8q1s1"]
[ext_resource type="PackedScene" uid="uid://0sqbfxf2vxg3" path="res://game/weapon/weapon_laser.tscn" id="6_ba31o"]
[ext_resource type="Script" path="res://game/menu/menu_levelup.gd" id="8_oy14h"]
[ext_resource type="Script" path="res://_debug/debug_hud.gd" id="8_ts8a7"]
[ext_resource type="Script" path="res://class/mob_system.gd" id="11_7kkpk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rv43j"]
radius = 500.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n5dwq"]
bg_color = Color(0.435294, 0, 0, 0.584314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mobnl"]
bg_color = Color(0.627451, 0.831373, 1, 0.4)

[sub_resource type="Animation" id="Animation_j2hn6"]
resource_name = "flash"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HPContainer/HP_Bar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_swpl0"]
resource_name = "xp_flash"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("XPContainer/XP_Bar:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(2, 2, 2, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4cpsv"]
_data = {
"hp_flash": SubResource("Animation_j2hn6"),
"xp_flash": SubResource("Animation_swpl0")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_5tq4r")

[node name="Deug_Hud" type="CanvasLayer" parent="."]
process_mode = 2
visible = false
script = ExtResource("8_ts8a7")

[node name="Control" type="Control" parent="Deug_Hud"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Deug_Hud/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ColorRect" type="ColorRect" parent="Deug_Hud/Control/MarginContainer"]
layout_mode = 2
color = Color(0.290196, 0.290196, 0.290196, 0.701961)

[node name="HBoxContainer" type="HBoxContainer" parent="Deug_Hud/Control/MarginContainer/ColorRect"]
layout_mode = 2
offset_right = 1820.0
offset_bottom = 980.0

[node name="PlayerWeapons" type="GridContainer" parent="Deug_Hud/Control/MarginContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("3_g6axv")
columns = 5

[node name="ArmouryWeapons" type="GridContainer" parent="Deug_Hud/Control/MarginContainer/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 5

[node name="Level" type="Node2D" parent="."]
visible = false
script = ExtResource("4_a67pm")

[node name="ParallaxBackground" type="ParallaxBackground" parent="Level"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Level/ParallaxBackground"]
motion_mirroring = Vector2(1920, 1080)

[node name="Sprite2D" type="Sprite2D" parent="Level/ParallaxBackground/ParallaxLayer"]
texture = ExtResource("5_emp0a")
centered = false

[node name="MobSpawner" type="Timer" parent="Level/ParallaxBackground"]
wait_time = 0.001

[node name="SpawnArea" type="Area2D" parent="Level"]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/SpawnArea"]
shape = SubResource("CircleShape2D_rv43j")

[node name="Items" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Mobs" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="." instance=ExtResource("2_ol85g")]

[node name="Weapon_ExposedReactor" parent="Player" instance=ExtResource("3_c3pw5")]

[node name="Weapon_ElectroMagnet" parent="Player" instance=ExtResource("5_0vwjd")]

[node name="Weapon_Laser" parent="Player" instance=ExtResource("6_ba31o")]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6_8q1s1")

[node name="HPContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="HP_Bar" type="ProgressBar" parent="HUD/HPContainer"]
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_n5dwq")
value = 100.0

[node name="XPContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 10

[node name="XP_Bar" type="ProgressBar" parent="HUD/XPContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_mobnl")
show_percentage = false

[node name="Level" type="Label" parent="HUD/XPContainer"]
layout_mode = 2
text = "Level 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
libraries = {
"": SubResource("AnimationLibrary_4cpsv")
}

[node name="Menu_LevelUp" type="CanvasLayer" parent="."]
process_mode = 2
visible = false
script = ExtResource("8_oy14h")

[node name="MarginContainer" type="MarginContainer" parent="Menu_LevelUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_LevelUp/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu_LevelUp/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "LEVEL UP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu_LevelUp/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 50
text = "OPTION 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1" type="Button" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "Not available"

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "OPTION 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "Not available"

[node name="VBoxContainer3" type="VBoxContainer" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "OPTION 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="Button" parent="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
text = "OPTION 3"

[node name="Menu_Pause" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="Menu_Pause"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Pause/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PAUSED" type="Label" parent="Menu_Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.435294, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu_Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "RESUME"

[node name="Settings" type="Button" parent="Menu_Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "SETTINGS"

[node name="Quit" type="Button" parent="Menu_Pause/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "QUIT
"

[node name="Game_Over" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="MarginContainer" type="MarginContainer" parent="Game_Over"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 150

[node name="VBoxContainer" type="VBoxContainer" parent="Game_Over/MarginContainer"]
layout_mode = 2

[node name="YouDied" type="Label" parent="Game_Over/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.435294, 0, 0, 1)
theme_override_font_sizes/font_size = 300
text = "YOU DIED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="Game_Over/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "RETURN TO MENU"

[node name="Mob_Pool" type="Node2D" parent="."]
script = ExtResource("11_7kkpk")

[node name="Spawn_Timer" type="Timer" parent="Mob_Pool"]
wait_time = 0.1
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="." to="Deug_Hud" method="_on_game_ready"]
[connection signal="ready" from="." to="Menu_LevelUp" method="_on_game_ready"]
[connection signal="ready" from="." to="Mob_Pool" method="_on_game_ready"]
[connection signal="timeout" from="Level/ParallaxBackground/MobSpawner" to="Level" method="_on_mob_spawner_timeout" flags=18]
[connection signal="player_levelup" from="Player" to="." method="_on_player_player_levelup"]
[connection signal="player_levelup" from="Player" to="Menu_LevelUp" method="_on_player_player_levelup"]
[connection signal="update_hud" from="Player" to="." method="_on_player_update_hud"]
[connection signal="update_debug_hud" from="Menu_LevelUp" to="Deug_Hud" method="_on_menu_level_up_update_debug_hud"]
[connection signal="pressed" from="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Button1" to="Menu_LevelUp" method="_on_button_1_pressed"]
[connection signal="pressed" from="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/Button2" to="Menu_LevelUp" method="_on_button_2_pressed"]
[connection signal="pressed" from="Menu_LevelUp/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer3/Button3" to="Menu_LevelUp" method="_on_button_3_pressed"]
[connection signal="pressed" from="Menu_Pause/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu_Pause/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Game_Over/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="timeout" from="Mob_Pool/Spawn_Timer" to="Mob_Pool" method="_on_spawn_timer_timeout"]
